--- a/CSS/CSS_Part_2/style.css
+++ b/CSS/CSS_Part_2/style.css
@@ -67,3 +67,10 @@ p:active{
     font-weight: bold;
     color: darkcyan;
 }
+
+input[type="radio"]:checked + label{
+    font-weight: 900;
+    color: white;
+    background-color: black;
+
+}
