--- a/CSS/CSS_Part_2/style.css
+++ b/CSS/CSS_Part_2/style.css
@@ -4,7 +4,7 @@
 }
 
 h1, h3{
-    color: red;
+    color: red ;
 
 }
 
@@ -85,4 +85,8 @@ div[id="MyId"] p::first-line{
 
 p::selection{
     background-color: palegoldenrod;
+}
+
+h3{
+    color: honeydew;
 }
