--- a/CSS/CSS_Part_4/style.css
+++ b/CSS/CSS_Part_4/style.css
@@ -1,4 +1,4 @@
-section{
+/* section{
     margin-top: 100px;
 }
 
@@ -28,7 +28,7 @@ div:nth-of-type(3n){
 
 /* Transform */
 
-#one{
+/* #one{
     transform: rotate(-45deg);
 }
 
@@ -46,4 +46,14 @@ div:nth-of-type(3n){
 
 #five{
     transform: rotate(-45deg) translate(100px) scale(2);
+} */
+
+div{
+    width: 200px;
+    height: 50px;
+    background-color: rgb(93, 174, 93);
+    text-align: center;
+    margin: 10px auto;
+
+    box-shadow: 2px 2px 10px black;
 }
