--- a/CSS/CSS_Part_4/style.css
+++ b/CSS/CSS_Part_4/style.css
@@ -16,8 +16,15 @@ div {
 }
 
 #relative {
-     background-color: yellow;
+    background-color: yellow;
     position: relative;
     top: 100px;
     left: 100px;
-}
+} 
+
+#absolute {
+    background-color: yellow;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+} 
