--- a/CSS/CSS_Part_4/style.css
+++ b/CSS/CSS_Part_4/style.css
@@ -28,3 +28,10 @@ div {
     top: 100px;
     left: 100px;
 } 
+
+#fixed {
+    background-color: yellow;
+    position: fixed;
+    top: 100px;
+    left: 100px;
+}
