--- a/CSS/CSS_Part_4/stylesmile.css
+++ b/CSS/CSS_Part_4/stylesmile.css
@@ -1,6 +1,6 @@
 #face {
-    height: 400px;
-    width: 400px;
+    height: 800px;
+    width: 800px;
     background-color: yellow;
     border: 1px solid black;
     border-radius: 50%;
@@ -10,31 +10,31 @@
 }
 
 #leye {
-    height: 50px;
-    width: 50px;
+    height: 10%;
+    width: 10%;
     background-color: black;
     position: absolute ;
-    top: 100px;
-    left: 100px;
+    top: 225px;
+    left: 200px;
     border-radius: 50%;
 }
 
 #reye {
-    height: 50px;
-    width: 50px;
+    height: 10%;
+    width: 10%;
     background-color: black;
-    position: absolute;
-    top: 100px;
-    left: 250px;
+    position: absolute ;
+    top: 235px;
+    left: 520px;
     border-radius: 50%;
 }
 
 #mouth {
-    height: 75px;
-    width:  200px;
+    height: 200px;
+    width:  400px;
     background-color: red;
     position: absolute;
-    top: 250px;
-    left: 100px;
-    border-radius: 0 0 50px 50px;
+    top: 500px;
+    left: 200px;
+    border-radius: 0 0 200px 200px;
 }
