--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -9,7 +9,8 @@ h1 {
     margin: 10px auto;
     border: 1px solid black;
     background-color: azure;
-    /* display: flex; */
+    display: flex;
+    flex-direction: row;
 }
 
 div {
