--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -10,12 +10,13 @@ h1 {
     border: 1px solid black;
     background-color: azure;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 div {
     height: 100px;
-    width: 300px;
+    width: 100px;
     color: white;
     text-align: center;
     font-size: 20px;
