--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -12,11 +12,12 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 div {
-    height: 100px;
+    height: 50px;
     width: 300px;
     color: white;
     text-align: center;
