--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -13,7 +13,7 @@ h1 {
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-items: flex-end;
 }
 
 div {
