--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -10,11 +10,11 @@ h1 {
     border: 1px solid black;
     background-color: azure;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
     /* align-items: baseline; */
-    align-content: center;
+    align-content: space-around;
 }
 
 div {
