--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -14,7 +14,7 @@ h1 {
     justify-content: flex-start;
     flex-wrap: wrap;
     /* align-items: baseline; */
-    align-content: space-around;
+    align-content: space-between;
 }
 
 div {
