--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -12,17 +12,17 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     /* align-items: baseline; */
     align-content: flex-start;
 }
 
 #orange {
-    align-self: center;
+    align-self: flex-start;
 }
 
 #blue {
-    align-self: flex-end;
+    align-self: flex-start;
 }
 
 div {
