--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -10,7 +10,7 @@ h1 {
     border: 1px solid black;
     background-color: azure;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
     flex-wrap: wrap;
     /* align-items: baseline; */
