--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -10,7 +10,7 @@ h1 {
     border: 1px solid black;
     background-color: azure;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
     /* align-items: baseline; */
@@ -18,18 +18,20 @@ h1 {
 }
 
 #orange {
-    align-self: baseline;
-    flex-basis: 50px;
+    align-self: flex-start;
+    /* flex-basis: 50px; */
+    flex-grow: 1;
 }
 
 #blue {
-    align-self: baseline;
-    flex-basis: 500px;
+    align-self: flex-start;
+    /* flex-basis: 400px; */
+    flex-grow: 1;
 }
 
 div {
-    height: 150px;
-    width: 300px;
+    height: 100px;
+    width: 50px;
     color: white;
     text-align: center;
     font-size: 20px;
