--- a/CSS/CSS_Part_5/style.css
+++ b/CSS/CSS_Part_5/style.css
@@ -19,23 +19,23 @@ h1 {
 
 #orange {
     align-self: flex-start;
-    /* flex-basis: 50px; */
+    /* flex-basis: 100px; */
     /* flex-grow: 1; */
     /* flex-shrink: 1; */
-    flex: 2 2 100;
+    flex: 2 100px;
 }
 
 #blue {
     align-self: flex-start;
-    /* flex-basis: 400px; */
+    /* flex-basis: 300px; */
     /* flex-grow: 2; */
     /* min-width: 200px; */
-    flex-shrink: 2;
+    /* flex-shrink: 2; */
 }
 
 div {
     height: 100px;
-    width: 300px;
+    width: 50px;
     color: white;
     text-align: center;
     font-size: 20px;
