--- a/CSS/CSS_Part_4/PQstyle.css
+++ b/CSS/CSS_Part_4/PQstyle.css
@@ -49,4 +49,7 @@
   width: 200px;
   height: 200px;
   background: pink;
+  opacity: 50;
+  background-image: url(man.png);
+  background-size: cover;
 }
