--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -3,8 +3,8 @@
     height: 300px;
     background-color: black;
     display: grid;
-    grid-template-rows: 80px 70px 60px;
-    grid-template-columns: 150px 150px 150px;
+    grid-template-rows: 50px 50px 50px 50px 50px;
+    grid-template-columns: 100px 100px 100px 100px 100px;
 }
 
 .item{
