--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -4,7 +4,7 @@
     background-color: black;
     display: grid;
     grid-template-rows: 50px 50px 50px 50px 50px;
-    grid-template-columns: 100px 100px 100px 100px 100px;
+    grid-template-columns: auto auto auto auto ;
 }
 
 .item{
