--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -3,8 +3,8 @@
     height: 300px;
     background-color: black;
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto auto auto;
 }
 
 .item{
