--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -12,13 +12,15 @@
     grid-template-rows: 1fr 1fr 1fr 1fr; /* grid rows can be written like this as well instead of repeat()*/
     grid-template-columns: repeat(3, 1fr);
 
-    row-gap: 10px;
-    column-gap: 20px;
+    /* row-gap: 10px;
+    column-gap: 20px; */
+
+    gap: 10px;/* Shorthand for row-gap and column-gap*/
 }
 
 .item{
-    height: 50px;
-    width: 100px;
+    /* height: 50px;
+    width: 100px; */
     background-color: yellowgreen;
     border: 2px solid black;
     text-align: center;
