--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -15,7 +15,7 @@
     /* row-gap: 10px;
     column-gap: 20px; */
 
-    gap: 10px;/* Shorthand for row-gap and column-gap*/
+    gap: 10px 30px;/* Shorthand for row-gap and column-gap*/
 }
 
 .item{
