--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -15,7 +15,7 @@
     /* row-gap: 10px;
     column-gap: 20px; */
 
-    gap: 10px 30px;/* Shorthand for row-gap and column-gap*/
+    gap: 10px;/* Shorthand for row-gap and column-gap*/
 }
 
 .item{
@@ -24,4 +24,10 @@
     background-color: yellowgreen;
     border: 2px solid black;
     text-align: center;
+}
+
+.one {
+    grid-column-start: 1;
+    grid-column-end: 3;
+
 }
