--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -19,8 +19,8 @@
 }
 
 .item{
-    /* height: 50px;
-    width: 100px; */
+    height: 50px;
+    width: 100px;
     background-color: yellowgreen;
     border: 2px solid black;
     text-align: center;
@@ -36,5 +36,5 @@
 }
 
 .two {
-    grid-row: 1/3
+    grid-row: 1/ span 3
 }
