--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -3,6 +3,9 @@
     height: 300px;
     background-color: yellow;
     display: grid;
+
+    /* Grid banane se element block item bann jata h */
+
     /* grid-template-rows: 50px 50px 50px 50px 50px ;
     grid-template-columns: 200px 200px 200px; */
 
