--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -2,7 +2,7 @@
     width: 600px;
     height: 300px;
     background-color: yellow;
-    display: grid;
+    display: inline-grid;
 
     /* Grid banane se element block item bann jata h */
 
