--- a/CSS/CSS_Part_6/self_style_pet_adoption.css
+++ b/CSS/CSS_Part_6/self_style_pet_adoption.css
@@ -16,15 +16,21 @@ span {
 }
 
 img {
-    width: 500px;
+    width: 100%;
     border-radius: 10px;
 }
 
 #pets {
-    justify-content: center;
+    justify-content: space-evenly;
     display: flex;
 }
 
 h4 {
     color: skyblue;
+}
+
+@media (max-width: 375px) {
+    #pets{
+        flex-wrap: wrap;
+    }
 }
