--- a/CSS/CSS_Part_6/style.css
+++ b/CSS/CSS_Part_6/style.css
@@ -68,7 +68,7 @@
 
 .b1 {
     background-color: seagreen;
-    position: static;   
+    position: relative;   
     z-index: 1;
     /* z-index does not work for static or default position */
 }
