--- a/CSS/CSS_Part_6/PQ1.css
+++ b/CSS/CSS_Part_6/PQ1.css
@@ -1,6 +1,6 @@
 #container {
-    height: 700px;
-    width: 1400px;
+    /* height: 700px;
+    width: 1400px; */
     background-color: white;
     display: grid;
     grid-template-rows: repeat(12, 1fr);
@@ -8,7 +8,7 @@
     gap: 10px;
 }
 
-div{
+div div{
     background-color: pink;
 }
 
