--- a/CSS/CSS_Part_6/PQ1.css
+++ b/CSS/CSS_Part_6/PQ1.css
@@ -1,6 +1,5 @@
 #container {
-    /* height: 700px;
-    width: 1400px; */
+    height: 100vh;
     background-color: white;
     display: grid;
     grid-template-rows: repeat(12, 1fr);
