--- a/CSS/CSS_Part_6/PQ2.css
+++ b/CSS/CSS_Part_6/PQ2.css
@@ -1,2 +1,72 @@
 /* Use Media Queries to change the layout in Question 1 the given one when the viewport
 width goes below 720px. */
+
+#container {
+    height: 100vh;
+    background-color: white;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    gap: 10px;
+}
+
+div div{
+    background-color: pink;
+}
+
+#header {
+    grid-column: 1/ span 12
+}
+
+#sidebar {
+    grid-row: 2/span 10;
+    grid-column: 1/ span 3;
+}
+
+#navigation {
+    grid-row: 2/ span 1;
+    grid-column: 4/ span 6;
+}
+
+#ads {
+    grid-row: 2/ span 10;
+    grid-column: 10/ span 3;
+}
+
+#main {
+    grid-row: 3/span 9;
+    grid-column: 4/span 6;
+}
+
+#footer {
+    grid-row: 12/span 1;
+    grid-column: 1/ span 12;
+}
+
+
+
+@media (max-width: 720px) {
+    #header {
+        grid-column: 1 / span 12;
+    }
+    #navigation {
+        grid-column: 1 / span 12;
+        grid-row: 2;
+    }
+    #sidebar {
+        grid-column: 1 / span 3;
+        grid-row: 3 / span 9;
+    }
+    #main {
+        grid-column: 4 / span 9;
+        grid-row: 3 / span 9;
+    }
+    #ads {
+        grid-column: 1 / span 3;
+        grid-row: 12;
+    }
+    #footer {
+        grid-column: 4 / span 9;
+        grid-row: 12;
+    }
+}
